# AurisRadio

./: CMakeLists.txt  README.md
modules/: FindAuris.cmake  FindLibUUID.cmake
source/: Jockey.cpp  Jockey.hpp  MainWindow.cpp  MainWindow.hpp  detail.hpp  main.cpp
